objects/Activity.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__CarePlanGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Goal this task is meant to address</description>
        <inlineHelpText>Goal this task is meant to address</inlineHelpText>
        <label>Goal</label>
        <referenceTo>HealthCloudGA__CarePlanGoal__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Problem this task is mean to address</description>
        <inlineHelpText>Problem this task is mean to address</inlineHelpText>
        <label>Problem</label>
        <referenceTo>HealthCloudGA__CarePlanProblem__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template</label>
        <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TaskType__c</fullName>
        <label>TaskType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Uncategorized</fullName>
                    <default>true</default>
                    <label>Uncategorized</label>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ringdna__Abandoned_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be checked if a caller hangs up prior to the call being answered from a queue. The caller abandoned call prior to being connected</description>
        <label>Abandoned Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna__Automated_Voicemail_Used__c</fullName>
        <inlineHelpText>This is the Automated Voicemail that was left during the outbound call</inlineHelpText>
        <label>Automated Voicemail Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ringdna__Automated_Voicemail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked this indicates that an Automated Voicemail was left during the outbound call</inlineHelpText>
        <label>Automated Voicemail?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna__Call_Connected__c</fullName>
        <formula>IF( ISPICKVAL( ringdna__Call_Disposition__c , &quot;Contacted&quot;) , TRUE, IF( ringdna__Call_Duration__c &gt; 90,TRUE,FALSE ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Connected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna__Call_Direction__c</fullName>
        <description>This is the direction of the RingDNA call.</description>
        <label>Call Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ringdna__Call_Disposition__c</fullName>
        <description>This describes the outcome of a call</description>
        <label>Call Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Set Appointment</fullName>
                </value>
                <value>
                    <fullName>DO NOT CALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ringdna__Call_Duration__c</fullName>
        <description>Call duration measured in seconds</description>
        <label>Call Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna__Call_Duration_min__c</fullName>
        <description>Call duration measured in minutes</description>
        <formula>ringdna__Call_Duration__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration (min)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna__Call_Hour_Of_Day_Local__c</fullName>
        <label>Call Hour Of Day (Local)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna__Call_Rating__c</fullName>
        <description>1 is low 5 is high</description>
        <label>Call Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna__Call_Recording_URL__c</fullName>
        <label>Call Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ringdna__Call_Recording__c</fullName>
        <formula>IF( ISBLANK( ringdna__Call_Recording_URL__c ) , &quot;&quot;, HYPERLINK( ringdna__Call_Recording_URL__c , &quot;Listen&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ringdna__Called_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the person called back. Generally linked to the use of Local Presence or Automated Voicemail</description>
        <label>Called Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna__Created_by_RingDNA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by RingDNA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna__Local_Presence_Num__c</fullName>
        <inlineHelpText>This is the Local Presence number that was used to place the outbound call</inlineHelpText>
        <label>Local Presence #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ringdna__Local_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked this indicates that Local Presence was used to make the outbound call</inlineHelpText>
        <label>Local Presence?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna__Queue_Hold_Time__c</fullName>
        <description>The amount of time a call has been in the queue before being picked up by and agent. It is measured in seconds</description>
        <label>Queue Hold Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna__Queue__c</fullName>
        <label>Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ringdna__Supervisor_Notes__c</fullName>
        <label>Supervisor Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ringdna__Voicemail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked this indicates that this call activity was created as the result of an inbound call that went to VM</inlineHelpText>
        <label>Voicemail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Additional_Emails__c</fullName>
        <inlineHelpText>Enter email addresses of all other participants separated by a comma [,].</inlineHelpText>
        <label>Send Email to External Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Customer_Duration_of_Meeting__c</fullName>
        <inlineHelpText>Enter the scheduled duration of the meeting in &quot;minutes&quot;, as a number.
Ex: 30</inlineHelpText>
        <label>Customer Meeting Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Customer_Start_Time__c</fullName>
        <inlineHelpText>Enter the starting time of the meeting as per customer.</inlineHelpText>
        <label>Customer Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Customer_Time_Zone__c</fullName>
        <inlineHelpText>Select the proper time zone location for the customer. DST will be managed automatically.</inlineHelpText>
        <label>Customer Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                    <label>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</label>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                    <label>(GMT+12:45/+13:45) Chatham Standard / Daylight Time (Pacific/Chatham)</label>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                    <label>(GMT+12:00/+13:00) New Zealand Standard / Daylight Time (Pacific/Auckland)</label>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                    <label>(GMT+13:00) Phoenix Is. Time (Pacific/Enderbury)</label>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                    <label>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</label>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                    <label>(GMT+12:00) Fiji Time (Pacific/Fiji)</label>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                    <label>(GMT+12:00) Petropavlovsk-Kamchatski Time (Asia/Kamchatka)</label>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                    <label>(GMT+10:30/+11:00) Lord Howe  Standard / Daylight Time (Australia/Lord_Howe)</label>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                    <label>(GMT+11:00) Norfolk Time (Pacific/Norfolk)</label>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                    <label>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</label>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                    <label>(GMT+10:00/+11:00) Australian Eastern Standard / Daylight Time (New South Wales) (Australia/Sydney)</label>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                    <label>(GMT+10:30/+9:30) Australian Central Standard / Daylight Time (South Australia) (Australia/Adelaide)</label>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                    <label>(GMT+09:30) Australian Central Standard Time (Northern Territory) (Australia/Darwin)</label>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                    <label>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</label>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                    <label>(GMT+09:00) Korea Standard Time (Asia/Seoul)</label>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                    <label>(GMT+08:00) Philippines Time (Asia/Manila)</label>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                    <label>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</label>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                    <label>(GMT+08:00) China Standard Time (Asia/Shanghai)</label>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                    <label>(GMT+08:00) Singapore Time (Asia/Singapore)</label>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                    <label>(GMT+08:00) China Standard Time (Asia/Taipei)</label>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                    <label>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</label>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                    <label>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</label>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                    <label>(GMT+07:00) West Indonesia Time (Asia/Jakarta)</label>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Bangkok)</label>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Ho_Chi_Minh)</label>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                    <label>(GMT+06:30) Myanmar Time (Asia/Rangoon)</label>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                    <label>(GMT+06:00) Bangladesh Time (Asia/Dhaka)</label>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                    <label>(GMT+05:45) Nepal Time (Asia/Kathmandu)</label>
                </value>
                <value>
                    <fullName>Asia/Kolkata</fullName>
                    <label>(GMT+05:30) India Standard Time (Asia/Kolkata)</label>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                    <label>(GMT+05:30) India Standard Time (Asia/Colombo)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__Join_before_host__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Let users join the meeting before the host arrives</inlineHelpText>
        <label>Join before host</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Make_it_Zoom_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this to make this as a zoom &amp; Calender event. This option will schedule a zoom meeting and put the meeting link in the description.</inlineHelpText>
        <label>Schedule a Zoom Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Use_personal_Zoom_meeting_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It&apos;s a setting of Zoom meeting.</description>
        <inlineHelpText>Use my Zoom personal meeting id</inlineHelpText>
        <label>Use my Zoom PMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoom Event</label>
        <referenceTo>zoom_app__Zoom_Event__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>